Processor - get rid of some deprecation warnings